Remove "Available on" on mobile. Fixed widths

--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -36,9 +36,19 @@
   }
 
   @media only screen and (max-width : 650px) {
+    width: 70%;
+
+    .social__title {
+      display: none;
+    }
+
     .social__bottom {
       flex-direction: column;
     }
+  }
+
+  @media only screen and (max-width : 650px) {
+    width: 85%;
   }
 }
 
